--- a/Spark_Dataframe_Basics/Spark_Dataframe_Basics.ipynb
+++ b/Spark_Dataframe_Basics/Spark_Dataframe_Basics.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Spark Dataframe Basics.ipynb",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOcF3wQN3/hRGZs/X06gF2Q",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/PaulAlexInc/SparkAndPythonForBigDataWithPySpark/blob/main/Spark_Dataframe_Basics/Spark_Dataframe_Basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
